Agrega cobertura para las modificaciones